# RelationshipOS

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  persona.md  pyproject.toml
.cursor/plans/: relationshipos_全面修复计划_209953e2.plan.md
.github/workflows/: ci.yml  nightly_memory.yml  retrain_router.yml  weekly_ops_report.yml
alembic/: README  env.py
alembic/versions/: 20260318_0001_create_event_records.py
benchmarks/: INVESTOR_DEMO.md  README.md  __init__.py  __main__.py  baseline_client.py  chat_backends.py  client.py  friend_chat_zh_demo.py  judge.py  mem0_client.py  minimax_companion_stress_zh_demo.py  minimax_friend_chat_zh_demo.py  official_edge_demo.py  persona_prompts.py  report.py  scoring.py  zh_recap.py
benchmarks/datasets/: companion_stress_zh.py  deep_memory.py  emotional.py  entity_social.py  friend_chat_zh.py  living_entity.py  locomo.py  msc.py  mt_bench.py  person_memory.py  proactive_governance.py
benchmarks/prompts/: lin_xiaoyu_persona.md
docs/: COMPLIANCE.md  architecture.md  interview_cheatsheet.md  roadmap_2026H1.md
policies/conscience/: base.json
policies/memory/: base.json
policies/persona/: base.json
policies/rendering/: base.json
reports/: manual_review_20260422.md  ops_2026-W18.md  stress_500_20260422.md
reports/raw/: stress_500_20260422.json
router_v2/: README.md
router_v2/docs/: MIGRATION.md  blog_vanguard_router_v2.md
router_v2/tests/: test_router_v2.py
router_v2/training/: build_labelled_set.py  (+12 more)
scripts/: emotion_ab_eval.py  labeling_metrics.py  llm_prelabel.py  merge_labels.py  nightly_memory_compress.py  query_shadow.py  review_labels.py  run_benchmark_iteration.ps1  weekly_ops_report.py
tests/: conftest.py  test_benchmark_clients.py  test_benchmarks_showcase.py  test_console.py  test_container.py  test_db_schema.py  test_emotion_ab_eval.py  test_emotional_prompt.py  test_entity.py  test_evaluations.py  test_followup_builder.py  test_foundation_parallel.py  test_governance.py  test_governance_policy.py  test_health.py  test_jobs.py  test_labeling_metrics.py  test_llm.py  test_llm_prelabel.py  test_memory.py  test_nightly_memory_compress.py  test_plan_dag.py  test_policy_registry.py  test_proactive_controllers.py  test_proactive_dispatch_handler.py  test_response_rendering_policy.py  test_review_labels.py  test_runtime_service.py  test_runtime_ws.py  test_sessions.py  test_shadow_logger_integration.py  test_streams.py  test_structured_probe_fallbacks.py  test_summary_builder.py  test_user_profile.py  test_users.py  test_vanguard_router.py  test_weekly_ops_report.py
(+197 files in other folders)
