[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "relationship-os"
version = "0.1.0"
description = "Scaffold for the RelationshipOS cognitive runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.1",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "litellm>=1.74.0,<2.0",
  "pgvector>=0.2.5",
  "psycopg[binary]>=3.1.18",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
  "structlog>=24.1.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "ruff>=0.3.5",
]
benchmark = []

[project.scripts]
relationship-os = "relationship_os.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/relationship_os"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.uv]
package = true
